log
Thu 28 Mar 2024 02:36:42 PM UTC: 
 tests:  0|6
total_score: 0/70
54bb2ca
Thu 28 Mar 2024 02:45:48 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c75d575
Thu 28 Mar 2024 02:48:34 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
0b9541f
Thu 28 Mar 2024 02:50:30 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:57: error: expected expression before ‘>’ token
   50 |   if (list == NULL || list->current == NULL || list-    >current->next == NULL)
      |                                                         ^
Compilation failed
2b3b162
Thu 28 Mar 2024 02:51:35 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
d47e450
Thu 28 Mar 2024 02:52:55 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
5e394ae
Thu 28 Mar 2024 02:54:49 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
4f1bc5e
Thu 28 Mar 2024 02:57:20 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  10|2
total_score: 45/70
6fa854c
